[package]
name = "arcanum"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rand = "0.9.1"
rand_core = { version = "0.9.3", features = ["os_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
zeroize = "1.8.1"
